# StrategyLab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_ewmac.py  workflow.txt
StrategyLabVenv/: pyvenv.cfg
market_data/: config.ini  config_manager.py  main.py  readme.md  requestor_factory.py  requirements.txt  standard_update_data.py
market_data/Api/: api.py
market_data/Database/: __init__.py  arctic_connection.py  arctic_delete.py  arctic_init.py  arcticdb_reader.py  arcticdb_writer.py
market_data/Extractor/: __init__.py  alphavantage_extractor.py  base_extractor.py  marketstack_extractor.py  yahoo_extractor.py
market_data/Types/: argument_runtype.py  (+1 more)
market_viz/: app.py  temp.py  test.py
scripts/: check_ib_connection.py  initialize_instrument_metadata.py
strategy_backtest/: README.md  backtest.py  backtest_system.py  main.py  test_trading_rules_simple.py
strategy_broker/: ib_connection.py  instrument_stack.py  run_stack_handler.py  test.py
strategy_brokers/: contract_factory.py  order.py  position.py  run_stack_handler.py
strategy_core/: __init__.py  optimization_usage.py
strategy_data/: initialize_ticker_metadata.py  standard_update_data.py
strategy_kdb/: 1  feed.py  tp.q
strategy_production/: account_update.py  calculate_positions.py  check_signals_and_order.py  daily_signal.py  execution.py  initialize_ticker_metadata.py  standard_update_data.py
strategy_trade/: broker_stack.py  contract_factory.py  contract_stack.py  ib_connection.py  instrument_stack.py  order.py  run_stack_handler.py
strategy_viz/: app.py
(+112 files in other folders)
